--- a/app/static/style/event_style.css
+++ b/app/static/style/event_style.css
@@ -5,7 +5,15 @@
     aspect-ratio: 16 / 9;  /* Maintains consistent card proportions */
     border: 1px solid #999;
     display: flex;
+    flex-direction: column;
+}
+
+.event-card-top
+{
+    display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
 }
 
 .event-card-left
