--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,10 +24,19 @@
                 </ul>
             </nav>
             <div class="filter-box-container">
-                <button id="filter-button">Filter</button>
+                <h4 id="filter-button"></h4>
             </div>
         </aside>
-        <div id="events-grid"></div>
+        <main>
+            <header class="header-bar">
+                <div class="header-content">
+                    <!-- Create content for header in JS -->
+                </div>
+            </header>
+            <div id="events-grid"></div>
+        </main>
+        
+        </div>
     </div>
     
 
