Link event on artist page to event page

--- a/app/static/style/artist_style.css
+++ b/app/static/style/artist_style.css
@@ -140,6 +140,11 @@
     padding: 10px;
 }
 
+.event-box > a {
+    text-decoration: none;
+    color: black;
+}
+
 .event-box p {
     margin: 0;
     font-family: "Courier New", monospace;
