add interstitial get-listed page to direct to artist or event forms

--- a/app/templates/AddArtistForm.html
+++ b/app/templates/AddArtistForm.html
@@ -26,7 +26,7 @@
                 <li><a href="/">HOME</a></li>
                 <li><a href="/artists">ARTISTS</a></li>
                 <!-- this needs to be differentiated to show it is selected -->
-                <li><a href="/addartistform">GET LISTED</a></li>
+                <li><a href="/get-listed">GET LISTED</a></li>
                 <li><a href="/about">ABOUT</a></li>
             </ul>
         </nav>
@@ -36,8 +36,8 @@
             <h2>Select One</h2>
             <!-- Placeholder for artist image - currently a colored rectangle -->
             <div class="listing-selection">
-                <button class="selection-button artist-selection">Artist</button>
-                <button class="selection-button event-selection">Event</button>
+                <a href="/addartistform"><button class="selection-button artist-selection">Artist</button></a>
+                <a href="/addeventform"><button class="selection-button event-selection">Event</button></a>
             </div>
         </div>
     </aside>
