--- a/app/templates/event.html
+++ b/app/templates/event.html
@@ -19,7 +19,7 @@
                     <li><a href="/">HOME</a></li>
                     <li><a href="/artists">ARTISTS</a></li>
                     <!-- Which Form do we link to artist or event? Or different landing?-->
-                    <li><a href="/addartistform">GET LISTED</a></li>
+                    <li><a href="/get-listed">GET LISTED</a></li>
                     <li><a href="/about">ABOUT</a></li>
                 </ul>
             </nav>
