--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="/">HOME</a></li>
                 <li><a href="/artists">ARTISTS</a></li>
-                <li><a href="/addartistform">GET LISTED</a></li>
+                <li><a href="/get-listed">GET LISTED</a></li>
                 <li><a href="/about">ABOUT</a></li>
             </ul>
         </nav>
