--- a/app/templates/successful-form.html
+++ b/app/templates/successful-form.html
@@ -19,7 +19,7 @@
                     <a href="/"><li>Home</li></a>
                     <a href="/artists"><li>Artists</li></a>
                     <!-- Which Form do we link to artist or event? Or different landing?-->
-                    <a href="/addartistform"><li>Get Listed</li></a>
+                    <a href="/get-listed"><li>Get Listed</li></a>
                     <a href="/about"><li>About</li></a>
                 </ul>
             </nav>
